A temporary fix for menu stacking issues in AFS - change should probably be moved to core if it works.

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -4,6 +4,14 @@
     margin-top: 20px;
 }
 
+.boxed {
+    position:relative;
+}
+
+#content-container {
+    z-index: 0;
+}
+
 .file-workbench-filter.series-data {
     position: relative;
     margin-top: 15px;
