Flip 'error' to true if user saves without instrument, re #577 and archesproject/arches#7813

--- a/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div style="height: 100%; padding: 10px 24px;">
     <div style="padding: 5px">
-        <div class="widget-input-label">Instrument</div>
+        <div class="widget-input-label">Instrument*</div>
         <div data-bind="component: {
             name: 'resource-instance-select-widget',
             params: {
