--- a/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
+++ b/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
@@ -20,7 +20,7 @@
                                     summary: true,
                                     disableDisambiguatedReport: true
                                 }
-                            }, css: {'selected-instance': $parent.value().map(function(r){return r.resourceId}).indexOf($data['_source']['resourceinstanceid']) >= 0},
+                            }, css: {'selected-instance': $parent.value().map(function(resource){return resource}).indexOf($data['_source']['resourceinstanceid']) >= 0},
                             click: function(){$parent.updateTileData($data['_source']['resourceinstanceid'])}">
                             </div>
                             <hr style="margin: 0"></hr>
