--- a/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
@@ -56,9 +56,11 @@
         <!-- ko foreach: fileLists -->
         <h5 class="summary-value" data-bind="text: digitalResourceName"></h5>
         <div style="display: inline-flex;">
+            <!-- ko if: $parent.hasAnnotatedParts -->
             <div style="border: solid 1px #ddd">
                 <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 300px; width: 400px"></div>
             </div>
+            <!-- /ko -->
             <div style="width: 1000px; padding-left: 30px;">
                 <table data-bind="datatable: tableConfig" class="table table-striped table-bordered" width="100%">
                     <thead>
