--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -35,6 +35,17 @@
 
                     }
                 }"></div>
+            </div>            
+            <!-- Description Tab -->
+            <div class="afs-report-page" data-bind="if: activeSection() === 'description'">
+                <div data-bind="component: {
+                    name: 'views/components/reports/scenes/description',
+                    params: {
+                        data: resource,
+                        cards: descriptionCards,
+
+                    }
+                }"></div>
             </div>
             <!-- Production -->
             <div class="afs-report-page" data-bind="if: activeSection() === 'prod'">
