work on existence scene

--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -205,6 +205,10 @@ i.toggle:hover {
     display: inline-block;
 }
 
+.afs-report-section > h2 {
+    text-transform: capitalize;
+}
+
 .afs-report-section .afs-report-a {
     padding: 3px 8px;
 }
